--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-003-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +75,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:17:58.51Z" type="text-version" status="0.0.7" xml:id="UT22084-088-003-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:16:13.986Z" type="translation-status" status="2.e" xml:id="UT22084-088-003-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:16:13.986Z" type="text-version" status="0.0.8" xml:id="UT22084-088-003-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
