--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -15,11 +15,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-015-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:20:26.229Z" type="text-version" status="0.0.7" xml:id="UT22084-088-015-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:18:00.429Z" type="translation-status" status="2.e" xml:id="UT22084-088-015-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:18:00.429Z" type="text-version" status="0.0.8" xml:id="UT22084-088-015-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
