--- a/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
+++ b/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-036-002-2253">Shakya Dewa and family</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.12 <date>2023</date>
+                <edition>v 1.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -180,6 +180,9 @@
                 <change who="#martina-cotter" when="2023-10-23T20:14:34.684Z" type="text-version" status="1.0.12" xml:id="UT22084-036-002-2290">
                     <desc>updated ellipsis</desc>
                 </change>
+                <change who="#celso" when="2024-02-09T16:47:37.882Z" type="text-version" status="1.0.13" xml:id="UT22084-036-002-2291">
+                    <desc>Corrected header</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -210,7 +213,7 @@
                                 <p tid="6">The generous sponsorship of Shakya Dewa and family, which helped make the work on this translation possible, is most gratefully acknowledged.</p>
                         </div>
                         <div type="introduction">
-                                <head type="introduction" tid="7">Introduction 1</head>
+                                <head type="introduction" tid="7">Introduction</head>
                                 <div type="section" xml:id="UT22084-036-002-introduction-1">
                                         <head type="section" tid="8">
                                                 <title xml:lang="en">A Multitude of Buddhas</title>
@@ -9622,7 +9625,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kṣatriya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal rigs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་རིགས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The warrior or royal caste in the four-caste system of India.</p>
                             </note>
                         </gloss>
@@ -9950,7 +9953,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">samādhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ting nge ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the synonyms for the meditative state, meaning a completely
                                                                 focused state.</p>
                             </note>
@@ -10418,7 +10421,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉན་ཐོས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A follower of those teachings of the Buddha that focus on the monastic
                                                                 lifestyle and liberating oneself from suffering, in contrast to followers of the
                                                                 bodhisattva vehicle who seek buddhahood for the sake of all beings.</p>
@@ -10698,7 +10701,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ska ba dpal brtsegs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྐ་བ་དཔལ་བརྩེགས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A famous Tibetan translator and monk of the eighth to the ninth century.</p>
                             </note>
                         </gloss>
@@ -10846,7 +10849,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the buddha of our era, the fourth buddha of the Bhadraka
                                                                 eon.</p>
                             </note>
@@ -11654,7 +11657,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the southern continent in Buddhist cosmology, which can
                                                                 mean the known world of humans or more specifically the Indian subcontinent. A
                                                                 gigantic miraculous rose-apple tree at the source of the great Indian rivers is said
@@ -11795,7 +11798,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣita</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The fourth (counting from the lowest) of the six paradises in the
                                                                 desire realm.</p>
                             </note>
