--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -4,17 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos gsum pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">tridharmakasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Threefold Teaching</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Tridharmakasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos gsum pa'i mdo/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Tridharmakanāmasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos gsum pa zhes bya ba'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">tridharmakanāmasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-066-011-1"/>
+                <consultant role="projectManager" xml:id="UT22084-066-011-2">Bhikṣuṇī Thubten Damcho</consultant>
+                <author role="translatorEng" xml:id="UT22084-066-011-3">Bhikṣuṇī Thubten Damcho</author>
+                <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel </author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -29,9 +34,36 @@
                     <idno source-id="O1JC114941JC11905" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:34:12.059Z" user="admin">11/05/2023 13:34:12</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:34:07.798Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:34:07.798Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-30T15:05:13.657Z" type="translation-status" status="4" xml:id="UT22084-066-011-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T15:05:13.657Z" type="text-version" status="0.0.1" xml:id="UT22084-066-011-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:34:07.798Z" type="translation-status" status="3" xml:id="UT22084-066-011-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:34:07.798Z" type="text-version" status="0.0.2" xml:id="UT22084-066-011-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:36:57.963Z" type="text-version" status="0.0.3" xml:id="UT22084-066-011-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:37:31.631Z" type="text-version" status="0.0.4" xml:id="UT22084-066-011-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-066-011-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-12T10:44:43.3Z" type="translation-status" status="2.h" xml:id="UT22084-066-011-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-12T10:44:43.3Z" type="text-version" status="0.0.6" xml:id="UT22084-066-011-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
