--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryamaitreyapratijñānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs</title>
-                <author role="translatorMain" xml:id="UT22084-091-040-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-040-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-040-2">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-091-040-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +68,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-01T15:34:36.678Z" type="text-version" status="0.0.5" xml:id="UT22084-091-040-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T15:35:08.59Z" type="text-version" status="0.0.6" xml:id="UT22084-091-040-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-12T15:19:47.95Z" type="translation-status" status="2.f" xml:id="UT22084-091-040-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-12T15:19:47.95Z" type="text-version" status="0.0.7" xml:id="UT22084-091-040-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
