--- a/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
+++ b/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
@@ -7,28 +7,22 @@
                 <title type="mainTitle" xml:lang="en">Chapter 2: On the Rite of Restoration</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Poṣadhavastu</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gso sbyong gi gzhi/</title>
-                <title type="otherTitle" xml:lang="zh">「律儀根本」之《說戒本事》</title>
-                <author role="translatorMain" xml:id="UT22084-001-002-1"/>
-                <author role="translatorEng" xml:id="UT22084-001-002-2">Robert
-                    Miller</author>
-                <editor role="externalReviewer" xml:id="UT22084-001-002-3">Vincent
-                    Eltschinger</editor>
-                <consultant role="projectManager" xml:id="UT22084-001-002-4">Robert
-                    Miller</consultant>
-                <consultant role="advisor" xml:id="UT22084-001-002-5">Haiyan Hu-von
-                    Hinüber</consultant>
-                <consultant role="advisor" xml:id="UT22084-001-002-6">Maurice
-                    Ozaine</consultant>
+                <title type="otherTitle" xml:lang="zh">《律本事》之《说戒本事》</title>
+                <author role="translatorMain" xml:id="UT22084-001-002-1">Robert Miller and team</author>
+                <author role="translatorEng" xml:id="UT22084-001-002-2">Robert Miller</author>
+                <consultant role="projectManager" xml:id="UT22084-001-002-4">Robert Miller</consultant>
+                <consultant role="advisor" xml:id="UT22084-001-002-5">Haiyan Hu-von Hinüber</consultant>
+                <consultant role="advisor" xml:id="UT22084-001-002-6">Maurice Ozaine</consultant>
                 <editor role="reviser" xml:id="UT22084-001-002-7">Matthew Wuethrich</editor>
-                <consultant role="dharmaMaster" xml:id="UT22084-001-002-8">Geshé Tséwang
-                    Nyima</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-001-002-8">Geshé Tséwang Nyima</consultant>
+                <editor role="projectEditor" xml:id="UT22084-001-002-28">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2023</date>
+                <edition>v 0.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-001-002"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +71,18 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-03T11:41:47.039Z" type="text-version" status="0.1.7" xml:id="UT22084-001-002-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:42:33.848Z" type="text-version" status="0.1.8" xml:id="UT22084-001-002-29">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-01-30T14:32:22.291Z" type="text-version" status="0.1.9" xml:id="UT22084-001-002-30">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:29:42.498Z" type="translation-status" status="2.e" xml:id="UT22084-001-002-31">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:29:42.498Z" type="text-version" status="0.1.10" xml:id="UT22084-001-002-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
