--- a/translations/kangyur/placeholders/001-003_toh1-3-chapter_3_on_the_relaxation_of_restrictions.xml
+++ b/translations/kangyur/placeholders/001-003_toh1-3-chapter_3_on_the_relaxation_of_restrictions.xml
@@ -4,25 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dgag dbye'i gzhi/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Pravāraṇāvastu</title>
                 <title type="mainTitle" xml:lang="en">Chapter 3: On the Relaxation of Restrictions</title>
-                <author role="translatorMain" xml:id="UT22084-001-003-1"/>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pravāraṇāvastu</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dgag dbye'i gzhi/</title>
+                <author role="translatorMain" xml:id="UT22084-001-003-1">Robert Miller and team</author>
                 <author role="translatorEng" xml:id="UT22084-001-003-2">Robert Miller</author>
-                <editor role="externalReviewer" xml:id="UT22084-001-003-3">Vincent Eltschinger</editor>
                 <consultant role="projectManager" xml:id="UT22084-001-003-4">Robert Miller</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-001-003-5">Geshé Tséwang Nyima</consultant>
                 <consultant role="advisor" xml:id="UT22084-001-003-6">Haiyan Hu-von Hinüber</consultant>
                 <consultant role="advisor" xml:id="UT22084-001-003-7">Maurice Ozaine</consultant>
                 <editor role="reviser" xml:id="UT22084-001-003-8">Matthew Wuethrich</editor>
+                <editor role="projectEditor" xml:id="UT22084-001-003-24">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2023</date>
+                <edition>v 0.1.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-001-003"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-03T11:43:09.335Z" type="text-version" status="0.1.3" xml:id="UT22084-001-003-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:43:53.199Z" type="text-version" status="0.1.4" xml:id="UT22084-001-003-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:31:08.092Z" type="translation-status" status="2.e" xml:id="UT22084-001-003-26">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:31:08.092Z" type="text-version" status="0.1.5" xml:id="UT22084-001-003-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
