--- a/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
+++ b/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
@@ -4,25 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dbyar gyi gzhi/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Varṣāvastu</title>
                 <title type="mainTitle" xml:lang="en">Chapter 4: On the Rains</title>
-                <author role="translatorMain" xml:id="UT22084-001-004-1"/>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Varṣāvastu</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dbyar gyi gzhi/</title>
+                <author role="translatorMain" xml:id="UT22084-001-004-1">Robert Miller and team</author>
                 <author role="translatorEng" xml:id="UT22084-001-004-2">Robert Miller</author>
-                <editor role="externalReviewer" xml:id="UT22084-001-004-3">Vincent Eltschinger</editor>
                 <consultant role="projectManager" xml:id="UT22084-001-004-4">Robert Miller</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-001-004-5">Geshé Tséwang Nyima</consultant>
                 <editor role="reviser" xml:id="UT22084-001-004-6">Matthew Wuethrich</editor>
                 <consultant role="advisor" xml:id="UT22084-001-004-7">Haiyan Hu-von Hinüber</consultant>
                 <consultant role="advisor" xml:id="UT22084-001-004-8">Maurice Ozaine</consultant>
+                <editor role="projectEditor" xml:id="UT22084-001-004-24">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2023</date>
+                <edition>v 0.1.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-001-004"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-03T11:44:21.41Z" type="text-version" status="0.1.3" xml:id="UT22084-001-004-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:44:59.803Z" type="text-version" status="0.1.4" xml:id="UT22084-001-004-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:32:26.134Z" type="translation-status" status="2.e" xml:id="UT22084-001-004-26">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T11:32:26.134Z" type="text-version" status="0.1.5" xml:id="UT22084-001-004-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
