--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -21,12 +21,12 @@
                 <editor role="projectEditor" xml:id="UT22084-055-002-52">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -116,6 +116,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-31T15:43:05.672Z" type="text-version" status="0.0.16" xml:id="UT22084-055-002-55">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T14:21:30.155Z" type="translation-status" status="2.a" xml:id="UT22084-055-002-56">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T14:21:30.155Z" type="text-version" status="0.0.17" xml:id="UT22084-055-002-57">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
