--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-003-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-003-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-003-13">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-003-22">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -81,6 +82,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-08T15:16:13.986Z" type="text-version" status="0.0.8" xml:id="UT22084-088-003-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:17:30.155Z" type="text-version" status="0.0.9" xml:id="UT22084-088-003-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T15:14:44.26Z" type="translation-status" status="2.d" xml:id="UT22084-088-003-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T15:14:44.26Z" type="text-version" status="0.0.10" xml:id="UT22084-088-003-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
