--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -13,13 +13,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-015-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-015-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-015-13">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-015-22">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-08T15:18:00.429Z" type="text-version" status="0.0.8" xml:id="UT22084-088-015-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T15:18:33.841Z" type="text-version" status="0.0.9" xml:id="UT22084-088-015-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T15:16:54.78Z" type="translation-status" status="2.d" xml:id="UT22084-088-015-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-13T15:16:54.78Z" type="text-version" status="0.0.10" xml:id="UT22084-088-015-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
