--- a/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Cycle Accomplishing All the Actions of Black Yamāri, a Sovereign Tantra</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarva­cakrasiddhikara</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Yamārikṛṣṇakarmasarva­cakrasiddhikara</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje'i gshed nag po'i las thams cad grub par byed pa 'khor lo'i rgyud kyi rgyal po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarvacakra­siddhikaranāmatantrarāja</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Yamārikṛṣṇakarmasarvacakra­siddhikaranāmatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gshin rje'i gshed dgra nag po'i 'khor lo las thams cad grub par byed pa zhes bya ba'i rgyud kyi rgyal po/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-083-021-1"/>
+                <author role="translatorEng" xml:id="UT22084-083-021-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-021"/>
                 <date/>
             </publicationStmt>
@@ -31,12 +32,27 @@
                     <idno source-id="O1JC114941JC12185" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:17:33.633Z" user="admin">30/06/2022 13:17:33</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:17:25.764Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-06-30T13:16:37.379Z" type="translation-status" status="3" xml:id="UT22084-083-021-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:16:37.379Z" type="text-version" status="0.0.1" xml:id="UT22084-083-021-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T13:17:25.764Z" type="text-version" status="0.0.2" xml:id="UT22084-083-021-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-083-021-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T12:33:51.935Z" type="translation-status" status="2.h" xml:id="UT22084-083-021-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T12:33:51.935Z" type="text-version" status="0.0.4" xml:id="UT22084-083-021-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
