--- a/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
+++ b/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
@@ -5,23 +5,24 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Array of the Buddhafields</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">buddhakṣetravyūhanirdeśasūtra</title>
-                <title type="mainTitle" xml:lang="zh">《說示佛國土莊嚴經》(大正藏:《佛說莊嚴王陀羅尼咒經》)</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Buddhakṣetravyūhanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi zhing gi bkod pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="zh">《說示佛國土莊嚴經》(大正藏:《佛說莊嚴王陀羅尼咒經》)</title>
                 <title type="otherTitle" xml:lang="en">The Sūtra, The Array of the Buddhafields</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­tathāgatādhiṣṭhānasattvāvalokena buddhakṣetravyūha­nirdeśa­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvatathāgatādhiṣṭhāna­sattvāvalokena buddhakṣetra­nirdeśanavyūha­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgatādhiṣṭhāna­sattvāvalokena buddha­kṣetranirdeśanavyūha­mahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarva­tathāgatādhiṣṭhānasattvāvalokena buddhakṣetravyūha­nirdeśa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvatathāgatādhiṣṭhāna­sattvāvalokena buddhakṣetra­nirdeśanavyūha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāgatādhiṣṭhāna­sattvāvalokena buddha­kṣetranirdeśanavyūha­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-046-004-1"/>
+                <author role="translatorEng" xml:id="UT22084-046-004-2">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-046-004"/>
                 <date/>
             </publicationStmt>
@@ -45,15 +46,39 @@
                     <idno source-id="O1JC114941JC12461" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-13T16:47:19.753Z" user="admin">13/02/2023 16:47:19</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T10:54:07.555Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-10T13:01:08.774Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-13T16:47:03.198Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-13T16:47:18.22Z" user="amy">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-08-25T10:53:31.592Z" type="translation-status" status="3" xml:id="UT22084-046-004-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:53:31.592Z" type="text-version" status="0.0.1" xml:id="UT22084-046-004-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-25T10:54:07.555Z" type="text-version" status="0.0.2" xml:id="UT22084-046-004-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#amy" when="2023-02-10T13:01:08.774Z" type="text-version" status="0.0.3" xml:id="UT22084-046-004-6">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T16:47:03.198Z" type="text-version" status="0.0.4" xml:id="UT22084-046-004-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T16:47:18.22Z" type="text-version" status="0.0.5" xml:id="UT22084-046-004-8">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-046-004-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-01-30T14:21:23.119Z" type="text-version" status="0.0.7" xml:id="UT22084-046-004-10">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T13:52:36.345Z" type="translation-status" status="2.h" xml:id="UT22084-046-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T13:52:36.345Z" type="text-version" status="0.0.8" xml:id="UT22084-046-004-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
