--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -5,21 +5,22 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Marvelous Dharma Discourse</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">adbhutadharmaparyāya</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Adbhutadharmaparyāya</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rmad du byung ba'i chos kyi rnam grangs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryādbhutadharmaparyāyanāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryādbhutadharmaparyāyanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmad du byung ba zhes bya ba'i chos kyi rnam grangs</title>
-                <author role="translatorMain" ref="eft:team-87"/>
-                <consultant role="dharmaMaster" ref="eft:person-423">Geshe Samten Gyatso</consultant>
-                <author role="translatorEng" ref="eft:person-424">Bianba Deji</author>
-                <author role="translatorEng" ref="eft:person-371">Daigengna Duoer</author>
-                <editor role="proofreader" ref="eft:person-371">Daigengna Duoer</editor>
+                <author role="translatorMain" xml:id="UT22084-072-019-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-072-019-2">Geshe Samten Gyatso</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-019-3">Bianba Deji</author>
+                <author role="translatorEng" xml:id="UT22084-072-019-4">Daigengna Duoer</author>
+                <editor role="proofreader" xml:id="UT22084-072-019-5">Daigengna Duoer</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -34,17 +35,42 @@
                     <idno source-id="O1JC114941JC11994" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-14T15:11:04.14Z" user="admin">14/12/2022 15:11:04</note>
-                <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-06T09:07:17.769Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-06T09:08:29.584Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:10:58.351Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-14T15:10:58.351Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-03-08T09:50:50.939Z" type="translation-status" status="4" xml:id="UT22084-072-019-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:50:50.939Z" type="text-version" status="0.0.1" xml:id="UT22084-072-019-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-06T09:06:35.397Z" type="translation-status" status="3" xml:id="UT22084-072-019-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-06T09:06:35.397Z" type="text-version" status="0.0.2" xml:id="UT22084-072-019-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-06T09:07:17.769Z" type="text-version" status="0.0.3" xml:id="UT22084-072-019-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-06T09:08:29.584Z" type="text-version" status="0.0.4" xml:id="UT22084-072-019-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T15:10:58.351Z" type="translation-status" status="2.h" xml:id="UT22084-072-019-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T15:10:58.351Z" type="text-version" status="0.0.5" xml:id="UT22084-072-019-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-072-019-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T14:22:20.419Z" type="translation-status" status="2.g" xml:id="UT22084-072-019-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-14T14:22:20.419Z" type="text-version" status="0.0.7" xml:id="UT22084-072-019-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
