--- a/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -32,7 +32,7 @@
           Jun.</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -181,6 +181,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-14T02:15:13.827Z" type="text-version" status="1.0.4" xml:id="UT22084-103-004-750">
                     <desc>After discussion with Lowell, several fixes throughout all sections.</desc>
+                </change>
+                <change who="#konchog" when="2024-02-14T18:50:33.216Z" type="text-version" status="1.0.5" xml:id="UT22084-103-004-752">
+                    <desc>Cleaning up the bibliography, a few fixes elsewhere.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -815,7 +818,7 @@
             <p tid="68">This great palace of the kingdom, filled to overflowing with priceless
               collections of precious items—cast statues and painted images of the well-gone ones,
               many volumes of the three scriptural baskets, and more—is a great temple, evidently
-              comparable to how the ratnakūṭa vihāras were said to be in the noble land of India.
+              comparable to how the ratnakūṭa vihāras<note place="end" xml:id="UT22084-103-004-751">Though it is not entirely clear what <foreign xml:lang="Sa-Ltn" type="term">ratnakūṭa vihāra</foreign> refers to here or why Situ Paṇchen wrote it in transliterated Sanskrit, we assume it refers to its literal meaning of "temples heaped high with jewels." It could, however, also possibly refer to a specific temple complex in India, though we know of no such place.</note> were said to be in the noble land of India.
             </p>
           </div>
           <div prefix="1.2" type="section" xml:id="UT22084-103-004-section-1-2">
@@ -2038,21 +2041,23 @@
           <bibl xml:id="UT22084-103-004-311">Cüppers, Christoph, Leonard W. J. van der Kuijp, and
             Ulrich Pagel. <title xml:lang="en">Handbook of Tibetan Iconometry: A Guide to the Arts
               of the 17th Century</title>. Leiden: Brill, 2012.</bibl>
-          <bibl xml:id="UT22084-103-004-320">Dorje, Gyurme, trans. <title xml:lang="en">The
-            Treasury of Knowledge Book Six, Parts One and Two: Indo-Tibetan Classical Learning and
-            Buddhist Phenomenology</title>. Boston: Snow Lion
-            Publications, 2012.</bibl>
-          <bibl xml:id="UT22084-103-004-312">Dorje, Sonam. “<ref target="http://treasuryoflives.org/biographies/view/Tenpa-Tsering/6499">The Tenth
-              Derge King, Tenpa Tsering</ref>.” The Treasury of Lives, accessed May 30, 2020.</bibl>
+          
+          
           <bibl xml:id="UT22084-103-004-313">Frye, Stanley. <title xml:lang="en">Nagarjuna’s A Drop
               of Nourishment for People and its commentary The Jewel Ornament</title>. Dharamsala:
             Library of Tibetan Works &amp; Archives, 1994.</bibl>
-          <bibl xml:id="UT22084-103-004-315">Gyatso, Ribur Ngawang, et al. “A Short History of
-            Tibetan Script.” <title xml:lang="en">The Tibet Journal</title> vol. 9, no. 2 (1984):
-            28–30.</bibl>
-          <bibl xml:id="UT22084-103-004-316">Gyiling, Tashi Gyatso and Gyiling Thugchok Dorji.
+          <bibl xml:id="UT22084-103-004-745">Geshe Sopa Lundhup, José Ignacio Cabezón, and Roger R.
+            Jackson. <title xml:lang="en">Tibetan Literature:
+              Studies in Genre: Essays in Honor of Geshe Lhundup
+              Sopa</title>. Ithaca: Snow Lion, 1996. </bibl>
+          
+          <bibl xml:id="UT22084-103-004-316">Gyilung Tashi Gyatso and Gyilung Thugchok Dorji.
               <title xml:lang="en">The Treasure of the Ancestral Clans of Tibet</title>. Translated
             by Yeshi Dhondup. Dharamsala: Library of Tibetan Works and Archives, 2009.</bibl>
+          <bibl xml:id="UT22084-103-004-320">Gyurme Dorje, trans. <title xml:lang="en">The
+            Treasury of Knowledge Book Six, Parts One and Two: Indo-Tibetan Classical Learning and
+            Buddhist Phenomenology</title>. Boston: Snow Lion
+            Publications, 2012.</bibl>
           <bibl xml:id="UT22084-103-004-317">Harrison, Paul (1996). “A Brief History of the Tibetan
             bKa’ ’gyur.” In <title xml:lang="en">Tibetan Literature: Studies in Genre</title>,
             edited by José Ignacio Cabezón and Roger R. Jackson, 70–94. Ithaca: Snow Lion,
@@ -2077,10 +2082,7 @@
             Kolmaš.</title> Prague: Academia Publishing House
             of the Czechoslovak Academy of Sciences,
             1968.</bibl>
-          <bibl xml:id="UT22084-103-004-745">Lundhup, Sopa G., José Ignacio Cabezón, and Roger R.
-            Jackson. <title xml:lang="en">Tibetan Literature:
-              Studies in Genre: Essays in Honor of Geshe Lhundup
-              Sopa</title>. Ithaca: Snow Lion, 1996. </bibl>
+          
           <bibl xml:id="UT22084-103-004-746">Martin, Dan. “The Highland Vinaya Lineage.” In <title xml:lang="en">Tibet After Empire: Culture, Society
             and Religion Between 850–1000: Proceedings of the
             Seminar Held in Lumbini, Nepal, March
@@ -2089,15 +2091,16 @@
             International Research Institute, 2013.</bibl>
           <bibl xml:id="UT22084-103-004-747">Nāgārjuna, Sa-skya Paṇḍi-ta. <title xml:lang="en">Elegant Sayings</title>. Emeryville CA: Dharma
             Publishing, 1977.</bibl>
+          <bibl xml:id="UT22084-103-004-737">Ngawang Tsepag. “Traditional Cataloguing &amp;
+            Classification of Tibetan Literature.” <title xml:lang="en">The Tibet Journal</title>, vol. 30,
+            no. 2 (2005): 49–60. </bibl>
           <bibl xml:id="UT22084-103-004-748">Petech, Luciano. <title xml:lang="en">China and Tibet
             in the Early XVIIIth Century</title>. Second,
             Revised Edition. Leiden: Brill, 1972.</bibl>
-          <bibl xml:id="UT22084-103-004-749">Rgyal-mtshan, B. <title xml:lang="en">The Mirror
-            Illuminating the Royal Genealogies: An Annotated
-            Translation of the XIVth Century Tibetan
-            Chronicle: rGyal-rabs gsal-ba’i me-long</title>.
-            Translated by Per K. Sørenson. Wiesbaden:
-            Harrassowitz, 1994.</bibl>
+          <bibl xml:id="UT22084-103-004-315">Ribur Ngawang Gyatso, et al. “A Short History of
+            Tibetan Script.” <title xml:lang="en">The Tibet Journal</title> vol. 9, no. 2 (1984):
+            28–30.</bibl>
+          
           <bibl xml:id="UT22084-103-004-314">Roerich, George, trans. <title xml:lang="en">The Blue
             Annals: Parts I and II</title>. Delhi: Motilal Banarsidass Publisher,
             2016. </bibl>
@@ -2141,19 +2144,25 @@
             Buddhism: Indian Buddhists and Their Tibetan
             Successors</title>. Vol. II. Boston: Shambhala,
             1987.</bibl>
-          <bibl xml:id="UT22084-103-004-737">Tsepag, Ngawang. “Traditional Cataloguing &amp;
-            Classification of Tibetan Literature.” <title xml:lang="en">The Tibet Journal</title>, vol. 30,
-            no. 2 (2005): 49–60. </bibl>
+          <bibl xml:id="UT22084-103-004-312">Sonam Dorje. “<ref target="http://treasuryoflives.org/biographies/view/Tenpa-Tsering/6499">The Tenth
+            Derge King, Tenpa Tsering</ref>.” The Treasury of Lives, accessed May 30, 2020.</bibl>
+          <bibl xml:id="UT22084-103-004-749">Sonam Gyaltsen (bsod nams rgyal mtshan). <title xml:lang="en">The Mirror
+            Illuminating the Royal Genealogies: An Annotated
+            Translation of the XIVth Century Tibetan
+            Chronicle: rGyal-rabs gsal-ba’i me-long</title>.
+            Translated by Per K. Sørenson. Wiesbaden:
+            Harrassowitz, 1994.</bibl>
+          
           <bibl xml:id="UT22084-103-004-738">Tucci, Giuseppe. <title xml:lang="en">The Tombs of
             Tibetan Kings</title>. Rome: Is. M. E. O.,
             1950.</bibl>
           <bibl xml:id="UT22084-103-004-739">van Schaik, Sam (2011). <title xml:lang="en">Tibet: A
             History</title>. New Haven: Yale University Press,
             2011. </bibl>
-          <bibl xml:id="UT22084-103-004-740">———(2013) “Ruler of the East, or Eastern Capital: What
+          <bibl xml:id="UT22084-103-004-740">———(2013). “Ruler of the East, or Eastern Capital: What
             Lies behind the Name Tong Kun?” In <title xml:lang="en">Studies in Chinese Manuscripts: From
               the Warring States to the Twentieth
-              Century</title>, edited by Imre Galambos.
+              Century</title>, edited by Imre Galambos, 211–223.
             Budapest: Eötvös Loránd University, 2013.</bibl>
           <bibl xml:id="UT22084-103-004-741">Vetturnini, Gianpaolo. “The bKa’ gdams pa School of
             Tibetan Buddhism.” PhD diss, SOAS, 2007.
